# IDIR-training

./: .gitignore  current_knowledge.md  current_knowledgeDetailed.md
cmake_helloworld/: CMakeLists.txt  hello.cpp
spdlog_test/: CMakeLists.txt  FileLogger.cpp  conanfile.txt
